# kjxqz.com

./: .gitignore  Dockerfile  MANIFEST.in  README.rst  nginx.conf  pyproject.toml  requirements.txt  scrabble_solver.py  setup.py  tox.ini
.github/workflows/: integration.yml  release.yml
docs/: Makefile  conf.py  index.rst  make.bat  reference.rst
docs/_templates/: gumroad.html
kjxqz/: __init__.py  __main__.py  dawg.js  index.html  main.js  service-worker-handler.js  service-worker.js  styles.css  words.txt
tests/: test_kjxqz.py
www/: dawg.js  index.html  main.js  nginx.conf  service-worker-handler.js  service-worker.js  styles.css  words.txt
